tests/snapshots/cli__add_follow_existing_same@existing_follows_flat_naersk_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/existing_follows_flat.flake.nix"
    - "--diff"
    - add-follow
    - naersk.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Already follows: naersk.inputs.nixpkgs.follows = "nixpkgs"

----- stderr -----
