tests/snapshots/cli__add_follow_existing_same@existing_follows_nested_devenv_nixpkgs.snap
---
source: tests/cli.rs
assertion_line: 405
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/existing_follows_nested.flake.nix"
    - "--diff"
    - add-follow
    - devenv.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Already follows: devenv.inputs.nixpkgs.follows = "nixpkgs"

----- stderr -----
