tests/snapshots/cli__add_follow_existing_same@existing_follows_nested_rust-overlay_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/existing_follows_nested.flake.nix"
    - "--diff"
    - add-follow
    - rust-overlay.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Already follows: rust-overlay.inputs.nixpkgs.follows = "nixpkgs"

----- stderr -----
