tests/snapshots/cli__add_follow_flat@flat_toplevel_comments_fenix_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/flat_toplevel_comments.flake.nix"
    - "--diff"
    - add-follow
    - fenix.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -4,6 +4,7 @@
   inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
   inputs.crane.url = "github:ipetkov/crane"; # build tool
   inputs.fenix.url = "github:nix-community/fenix"; # rust toolchains
+  inputs.fenix.inputs.nixpkgs.follows = "nixpkgs";

   outputs = _: { };
 }

----- stderr -----
