tests/snapshots/cli__add_follow_flat@flat_toplevel_no_follows_fenix_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/flat_toplevel_no_follows.flake.nix"
    - "--diff"
    - add-follow
    - fenix.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -4,6 +4,7 @@
   inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
   inputs.crane.url = "github:ipetkov/crane";
   inputs.fenix.url = "github:nix-community/fenix";
+  inputs.fenix.inputs.nixpkgs.follows = "nixpkgs";

   outputs = _: { };
 }

----- stderr -----
