tests/snapshots/cli__add_follow_flat@one_level_nesting_flat_rust-overlay_flake-compat.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/one_level_nesting_flat.flake.nix"
    - "--diff"
    - add-follow
    - rust-overlay.flake-compat
    - flake-compat
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -7,6 +7,7 @@
     rust-overlay.url = "github:oxalica/rust-overlay";
     rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
     rust-overlay.inputs.flake-utils.follows = "flake-utils";
+    rust-overlay.inputs.flake-compat.follows = "flake-compat";
     crane.url = "github:ipetkov/crane";
     crane.inputs.nixpkgs.follows = "nixpkgs";
     crane.inputs.rust-overlay.follows = "rust-overlay";

----- stderr -----
